Code changes for input handling